# PIBITI_unb

./: CMakeLists.txt  Makefile  README.md
include/: Config.h  Descriptor.h  Detector.h
src/: Descriptor.cpp  Detector.cpp  main.cpp
utils/: verifyOpenCvInstalation.cpp
